<resources>
    <string name="app_name">Lipid-Lator</string>
    <string name="appTitle">Lipid-Lator</string>
    <string name="Ion">Ion:</string>
    <string name="Acid">Acid:</string>
    <string name="Ester">Ester:</string>
    <string name="Alcohol">Alcohol:</string>
    <string name="AcylChain">Acyl Chain:</string>
    <string name="Submit">SUBMIT</string>
    <string name="FAResults">Fatty Acids\nMass Calculations</string>
    <string name="WEResults">Wax Esters\nMass Calculations</string>
    <string name="ACResults">Acyl Carnitines\nMass Calculations</string>
    <string name="CoAResults">CoA Esters\nMass Calculations</string>
    <string name="GLResults">Glycerolipids\nMass Calculations</string>
    <string name="GPLResults">Glycerophospholipids\nMass Calculations</string>
    <string name="CLResults">Cardiolipins\nMass Calculations</string>
    <string name="SLResults">Sphingolipids\nMass Calculations</string>
    <string name="CEResults">Cholesteryl Esters\nMass Calculations</string>
    <string name="FAConfiguration">Fatty Acids\nConfiguration</string>
    <string name="WEConfiguration">Wax Esters\nConfiguration</string>
    <string name="ACConfiguration">Acyl Carnitines\nConfiguration</string>
    <string name="CoAConfiguration">CoA Esters\nConfiguration</string>
    <string name="GLConfiguration">Glycerolipids\nConfiguration</string>
    <string name="GPLConfiguration">Glycerophospholipids\nConfiguration</string>
    <string name="CLConfiguration">Cardiolipins\nConfiguration</string>
    <string name="SLConfiguration">Sphingolipids\nConfiguration</string>
    <string name="CEConfiguration">Cholesteryl Esters\nConfiguration</string>
    <string name="Abbreviation">Abbreviation:</string>
    <string name="Formula">Formula:</string>
    <string name="MolarMass">Molar Mass:</string>
    <string name="Back">BACK</string>
    <string name="Home">HOME</string>
    <string name="sn1">sn1:</string>
    <string name="sn2">sn2:</string>
    <string name="sn3">sn3:</string>
    <string name="sn1_1">sn1(1\'):</string>
    <string name="sn2_1">sn2(1\'):</string>
    <string name="sn1_3">sn1(3\'):</string>
    <string name="sn2_3">sn2(3\'):</string>
    <string name="HeadGroup">Head Group:</string>
    <string name="SphingoidBase">Sphingoid Base:</string>
    <string name="NAcyl">N-acyl:</string>
    <string name="ResultPlaceHolder">XXXXX</string>
    <string name="HomeTitle">Select Your \nLipid Class</string>
    <string name="FALabel">Fatty Acids\nTesting</string>
    <string name="WELabel">Wax Esters\nTesting</string>
    <string name="ACLabel">Acyl Carnitines\nTesting</string>
    <string name="CAELabel">CoA Esters\nTesting</string>
    <string name="GlyLabel">Glycerolipids\nTesting</string>
    <string name="GlpLabel">Glycerophospholipids\nTesting</string>
    <string name="CALabel">Cardiolipins\nTesting</string>
    <string name="SPLabel">Sphingolipids\nTesting</string>
    <string name="CELabel">Cholesteryl Esters\nTesting</string>
    <string name="FAImageDesc">Android image placeholder to represent a Fatty Acid image</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="info">More Info</string>
    <string name="contactUs">Contact Us</string>
    <string name="ok">OK</string>
    <string name="HelpDescription">Here is where we will input all of the details about what this app is about and a few other things we will think about later on. Begin to think of things to put here. Also some images here and there.</string>
    <string name="AlertMessage"><b>WELCOME TO LIPID-LATOR!</b>\n\n\nThank you for downloading our app, we really hope all of the information provided here is of utmost use to you.
    If you need any assistance please take a look at our help menu in the top right corner of any screen. Also, if you wish to give us feedback on anything, send us a message
    in the \"Contact Us\" section found in the menu as well.\n\n<b>**Before you get started quick important detail. All of our molar masses being calculated might have a \u00B1 0.000555 m/z ratio.**</b>\n\nHope you enjoy!</string>
    <string name="how_to_use_this_app">HOW TO USE THIS APP</string>
    <string name="got_it">Got It!</string>
    <string name="fb">FB</string>
    <string name="rate_us">Rate Us!</string>
    <string name="paragraph_one">Begin by selecting one of the 9 lipids in the home screen.</string>
    <string name="step_1">Step 1:</string>
    <string name="menuimage1">First screen in help menu</string>
    <string name="step_2">Step 2:</string>
    <string name="paragraph_two">You are now in the configuration screen for the selected lipid class. Here you can make any changes to conform to your needs and specifications. Once you have selected everything you need, proceed by tapping the <b>SUBMIT</b> button.</string>
    <string name="configuration_screen">Configuration Screen</string>
    <string name="step_3">Step 3:</string>
    <string name="paragraph_three">Now you will be in the results screen. Here you can view what you selected in the previous screen and you will also see your final calculations at the bottom. These include the: Abbreviation, Formula, and Molar Mass. Tap on <b>BACK</b> to change some of the specifications or <b>HOME</b> to return to the main menu.</string>
    <string name="resultscreen">Result Screen</string>
    <string name="step_4">Step 4:</string>
    <string name="paragraph_four">If you need to return to this menu, tap HELP in the top right menu. Also be sure to check out the other tabs as well.</string>
    <string name="menu_screen">Menu Screen</string>
    <string name="logo_for_app">Logo for app</string>
    <string name="google_content">Google FeedBack</string>
    <string name="fb_content">FaceBook Group</string>
    <string-array name="ion_array">
        <item>[M+H]+</item>
        <item>[M+H-H2O]+</item>
        <item>[M+2H]2+</item>
        <item>[M+3H]3+</item>
        <item>[M+4H]4+</item>
        <item>[M+K]+</item>
        <item>[M+2K]2+</item>
        <item>[M+2K-H]+</item>
        <item>[M+Na]+</item>
        <item>[M+2Na]2+</item>
        <item>[M+2Na-H]+</item>
        <item>[M+Li]+</item>
        <item>[M+2Li]2+</item>
        <item>[M+Ag]+</item>
        <item>[M+NH4]+</item>
        <item>[M-H]-</item>
        <item>[M-CH3]-</item>
        <item>[M-2H]2-</item>
        <item>[M-3H]3-</item>
        <item>[M-4H]4-</item>
        <item>[M+Cl]-</item>
        <item>[M+OAc]-</item>
        <item>[M+Formate]-</item>
        <item>M(neutral)</item>
    </string-array>
    <string-array name="ratios_array">
        <item>2:0</item>
        <item>4:0</item>
        <item>6:0</item>
        <item>8:0</item>
        <item>10:0</item>
        <item>12:0</item>
        <item>13:0</item>
        <item>14:0</item>
        <item>14:1(9Z)</item>
        <item>15:0</item>
        <item>15:1(9Z)</item>
        <item>16:0</item>
        <item>16:1(9Z)</item>
        <item>17:0</item>
        <item>17:1(9Z)</item>
        <item>17:2(9Z,12Z)</item>
        <item>18:0</item>
        <item>18:1(11E)</item>
        <item>18:1(9Z)</item>
        <item>18:2(9Z,12Z)</item>
        <item>18:3(6Z,9Z,12Z)</item>
        <item>18:3(9Z,12Z,15Z)</item>
        <item>18:4(6Z,9Z,12Z,15Z)</item>
        <item>19:0</item>
        <item>20:0</item>
        <item>20:1(11Z)</item>
        <item>20:2(11Z,14Z)</item>
        <item>20:3(8Z,11Z,14Z)</item>
        <item>20:4(5Z,8Z,11Z,14Z)</item>
        <item>20:5(5Z,8Z,11Z,14Z,17Z)</item>
        <item>21:0</item>
        <item>22:0</item>
        <item>22:1(11Z)</item>
        <item>22:2(13Z,16Z)</item>
        <item>22:3(10Z,13Z,16Z)</item>
        <item>22:4(7Z,10Z,13Z,16Z)</item>
        <item>22:5(7Z,10Z,13Z,16Z,19Z)</item>
        <item>22:6(4Z,7Z,10Z,13Z,16Z,19Z)</item>
        <item>23:0</item>
        <item>24:0</item>
        <item>24:1(15Z)</item>
        <item>25:0</item>
        <item>26:0</item>
    </string-array>
    <string-array name="ester_array_values">
        <item>"Free acid"</item>
        <item>"Methyl ester"</item>
        <item>"Pentafluorobenzyl ester"</item>
    </string-array>
    <string-array name="sphingoid_array_values">
        <item>"d18:1(4E)"</item>
        <item>"d18:0"</item>
        <item>"d18:2"</item>
        <item>"t18:0"</item>
        <item>"t18:1"</item>
        <item>"d20:1"</item>
        <item>"d20:0"</item>
        <item>"d20:2"</item>
        <item>"t20:0"</item>
        <item>"t20:1"</item>
        <item>"d16:1"</item>
        <item>"d16:0"</item>
        <item>"d16:2"</item>
        <item>"t16:0"</item>
        <item>"t16:1"</item>
        <item>"d14:1"</item>
        <item>"d14:0"</item>
        <item>"d14:2"</item>
        <item>"t14:0"</item>
        <item>"t14:1"</item>
        <item>"d15:1"</item>
        <item>"d15:0"</item>
        <item>"d15:2"</item>
        <item>"t15:0"</item>
        <item>"t15:1"</item>
        <item>"d17:1"</item>
        <item>"d17:0"</item>
        <item>"d17:2"</item>
        <item>"t17:0"</item>
        <item>"t17:1"</item>
        <item>"d19:1"</item>
        <item>"d19:0"</item>
        <item>"d19:2"</item>
        <item>"t19:0"</item>
        <item>"t19:1"</item>
        <item>"d21:1"</item>
        <item>"d21:0"</item>
        <item>"d21:2"</item>
        <item>"t21:0"</item>
        <item>"t21:1"</item>
        <item>"d22:1"</item>
        <item>"d22:0"</item>
        <item>"d22:2"</item>
        <item>"t22:0"</item>
        <item>"t22:1"</item>
    </string-array>
    <string-array name="n_acyl_array_values">
        <item>"12:0"</item>
        <item>"13:0"</item>
        <item>"14:0"</item>
        <item>"h14:0"</item>
        <item>"15:0"</item>
        <item>"h15:0"</item>
        <item>"16:0"</item>
        <item>"16:1"</item>
        <item>"h16:0"</item>
        <item>"h16:1"</item>
        <item>"17:0"</item>
        <item>"h17:0"</item>
        <item>"18:0"</item>
        <item>"18:1"</item>
        <item>"h18:0"</item>
        <item>"h18:1"</item>
        <item>"19:0"</item>
        <item>"h19:0"</item>
        <item>"20:0"</item>
        <item>"20:1"</item>
        <item>"h20:0"</item>
        <item>"h20:1"</item>
        <item>"21:0"</item>
        <item>"h21:0"</item>
        <item>"22:0"</item>
        <item>"22:1"</item>
        <item>"h22:0"</item>
        <item>"h22:1"</item>
        <item>"23:0"</item>
        <item>"h23:0"</item>
        <item>"24:0"</item>
        <item>"24:1"</item>
        <item>"h24:0"</item>
        <item>"h24:1"</item>
        <item>"25:0"</item>
        <item>"h25:0</item>
        <item>"26:0"</item>
        <item>"26:1"</item>
        <item>"h26:0"</item>
        <item>"h26:1"</item>
        <item>"27:0"</item>
        <item>"h27:0"</item>
        <item>"28:0"</item>
        <item>"h28:0"</item>
        <item>"29:0"</item>
        <item>"h29:0"</item>
        <item>"30:0"</item>
        <item>"h30:0"</item>
        <item>"31:0"</item>
        <item>"h31:0"</item>
        <item>"32:0"</item>
        <item>"h32:0"</item>
    </string-array>
    <string-array name="gly_headgroup_array_values">
        <item>"PC"</item>
        <item>"PA"</item>
        <item>"PS"</item>
        <item>"PE"</item>
        <item>"PG"</item>
        <item>"PGP"</item>
        <item>"PI"</item>
        <item>"PIP"</item>
        <item>"PIP2"</item>
        <item>"PIP3"</item>
    </string-array>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="title_slide1">Connect the charger</string>
    <string name="desc_slide1">It will start automatically when charger is connected</string>
    <string name="title_slide2">Battery status update</string>
    <string name="desc_slide2">It will  keep you updated on battery charging status through notification and home screen widget</string>
    <string name="title_slide3">Alert on 100%</string>
</resources>