<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_about"
        android:orderInCategory="1"
        android:title="@string/about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_contact_us"
        android:orderInCategory="2"
        android:title="@string/contactUs"
        app:showAsAction="never" />
    <item
        android:id="@+id/more_info"
        android:orderInCategory="3"
        android:title="@string/info"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_help"
        android:orderInCategory="4"
        android:title="@string/help"
        app:showAsAction="never"/>

</menu>