<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="teamtriplej.com.lipidlator21.AcylCarnitines_Result_Activity">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/AC"
        android:text="@string/Back"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.25" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/AC"
        android:text="@string/Home"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.812" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ACResults"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502" />

    <TextView
        android:id="@+id/tvIon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ion"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvIonResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ResultPlaceHolder"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginRight="25dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvAcylChain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AcylChain"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/tvIon" />

    <TextView
        android:id="@+id/tvAcylChainResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ResultPlaceHolder"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginRight="25dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/tvIonResult" />

    <TextView
        android:id="@+id/tvAbbreviation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Abbreviation"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAcylChain" />

    <TextView
        android:id="@+id/tvAbbreviationResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ResultPlaceHolder"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginRight="25dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAcylChainResult" />

    <TextView
        android:id="@+id/tvMolarMassResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ResultPlaceHolder"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginRight="25dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/tvFormulaResult" />

    <TextView
        android:id="@+id/tvFormula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Formula"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAbbreviation" />

    <TextView
        android:id="@+id/tvMolarMass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MolarMass"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/tvFormula" />

    <TextView
        android:id="@+id/tvFormulaResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ResultPlaceHolder"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginRight="25dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAbbreviationResult" />
</android.support.constraint.ConstraintLayout>
